[package]
name = "cryptoxide"
version = "0.3.2"
authors = ["Vincent Hanquez <vincent@typed.io>", "Nicolas Di Prima <nicolas@prime-type.co.uk>", "The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/typed-io/cryptoxide/"
repository = "https://github.com/typed-io/cryptoxide/"
description = "pure implementation of various common modern cryptographic algorithms, WASM compatible"
keywords = [ "Crypto", "Cryptography", "Modern", "Pure" ]
categories = [ "cryptography" ]
edition = '2018'

[badges]

[lib]
doctest = false

[build-dependencies]

[dependencies]

[features]
default = ["blake2", "sha1", "sha2", "sha3", "chacha", "salsa", "hkdf", "hmac", "pbkdf2", "poly1305", "scrypt", "curve25519", "ed25519"]
blake2 = ["digest", "mac"]
sha1 = ["digest"]
sha2 = ["digest"]
sha3 = ["digest"]
digest = []

chacha = []
salsa = []

mac = ["digest"]
hkdf = ["digest", "hmac"]
hmac = ["digest", "mac"]
pbkdf2 = ["mac"]
scrypt = ["pbkdf2", "mac", "hmac"]
poly1305 = ["mac"]

curve25519 = []
ed25519 = ["sha2", "curve25519"]

with-bench = []
