[package]
name = "cryptoxide"
version = "0.5.3"
authors = ["Vincent Hanquez <vincent@coretype.io>", "Nicolas Di Prima <nicolas@prime-type.co.uk>", "The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/typed-io/cryptoxide/"
repository = "https://github.com/typed-io/cryptoxide/"
description = "pure implementation of various common modern cryptographic algorithms, WASM compatible"
keywords = [ "Crypto", "Cryptography", "Modern", "Pure" ]
categories = [ "cryptography" ]
edition = '2021'
rust-version = "1.78"

[badges]

[lib]
doctest = false

[build-dependencies]

[dependencies]

[features]
default = [
    "aes",
    "argon2",
    "blake2",
    "blake3",
    "sha1",
    "sha2",
    "sha3",
    "ripemd160",
    "chacha",
    "salsa",
    "hkdf",
    "hmac",
    "pbkdf2",
    "poly1305",
    "scrypt",
    "curve25519",
    "ed25519",
    "x25519"
]
aes = []
blake2 = []
blake3 = []
sha1 = []
sha2 = []
sha3 = []
ripemd160 = []
digest = []

chacha = []
salsa = []

mac = ["digest"]
hkdf = ["digest", "hmac"]
hmac = ["digest", "mac"]
pbkdf2 = ["mac"]
scrypt = ["pbkdf2", "mac", "hmac"]
argon2 = ["blake2"]
poly1305 = []

curve25519 = []
ed25519 = ["sha2", "curve25519"]
x25519 = ["curve25519"]

with-bench = []
force-32bits = []
